<resources>
    <string name="app_name">Terrain</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_parcel">Parcel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Terrain user</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_parcels">My Parcels</string>
    <string name="menu_surveys">My Surveys</string>
    <string name="menu_buildings">My Buildings</string>
    <string name="menu_control_points">My Control points</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="terrain">Parcel</string>
    <string name="building">Building</string>
    <string name="survey">Survey</string>
    <string name="control_point">Control point</string>
</resources>