<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_parcels"
            android:icon="@drawable/ic_scatter_plot"
            android:title="@string/menu_parcels" />
        <item
            android:id="@+id/nav_surveys"
            android:icon="@drawable/ic_assignment"
            android:title="@string/menu_surveys" />
        <item
            android:id="@+id/nav_buildings"
            android:icon="@drawable/ic_foundation"
            android:title="@string/menu_buildings" />
        <item
            android:id="@+id/nav_control_points"
            android:icon="@drawable/ic_control_point_duplicate"
            android:title="@string/menu_control_points" />
    </group>
    <group>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />

    </group>

</menu>